--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,8 @@
 </p>
 
 <p>
-  <strong></strong>
+  <strong>Text:</strong>
   <%= @article.text %>
 </p>
+<%= link_to 'Edit', edit_article_path(@article)%>
 <%= link_to 'Back',articles_path %>
